--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "framer-motion": "^12.23.22",
     "next": "^14.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3"
   }
 }
